charon/tests/ui/associated_types/issue-1068-gat-with-assoc-ty.rs
//@ known-failure
//@ charon-args=--lift-associated-types=_
pub trait Foo {
    type Size: Copy;
}

pub trait Bar {
    type Item<T>: Foo;
}
